--- a/app/src/main/res/layout/fragment_detail_gener.xml
+++ b/app/src/main/res/layout/fragment_detail_gener.xml
@@ -23,14 +23,15 @@
             android:id="@+id/linearLayout"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="15dp"
             android:orientation="horizontal"
-            android:weightSum="3"
+            android:weightSum="6"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
             <TextView
+                android:id="@+id/btnBack"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -43,17 +44,21 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_weight="1"
+                android:layout_weight="4"
                 android:gravity="center"
-                android:text="Beverages"
+                android:text="@{viewmodel.title}"
+                android:fontFamily="@font/gilroy_bold"
                 android:textColor="#000"
-                android:textSize="20sp" />
+                android:textSize="25sp" />
 
-            <androidx.appcompat.widget.SearchView
+            <TextView
+                android:id="@+id/btnSearch"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_weight="1"
+                android:layout_marginEnd="20dp"
+                android:drawableEnd="@drawable/ic_search"
                 android:gravity="end" />
         </LinearLayout>
 
