--- a/app/src/main/res/layout/item_detail_genre.xml
+++ b/app/src/main/res/layout/item_detail_genre.xml
@@ -26,7 +26,7 @@
                 <ImageView
                     android:id="@+id/imgPopular"
                     android:layout_width="0dp"
-                    android:layout_height="150dp"
+                    android:layout_height="200dp"
                     android:scaleType="centerCrop"
                     android:profileImage="@{data.thumb}"
                     android:src="@drawable/image_title"
@@ -39,16 +39,18 @@
 
             <TextView
                 android:id="@+id/txtName"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="10dp"
+                android:layout_marginEnd="20dp"
                 android:fontFamily="@font/gilroy_bold"
                 android:lines="1"
                 android:text="@{data.title}"
                 android:textColor="#000"
                 android:textSize="20sp"
                 android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/imgPopular" />
 
@@ -58,40 +60,14 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="5dp"
+                android:layout_marginBottom="10dp"
                 android:fontFamily="@font/gilroy_medium"
-                android:text="chap, price"
+                android:text="@{data.type}"
                 android:textColor="#7C7C7C"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/txtName" />
 
-            <TextView
-                android:id="@+id/txtPrice"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:fontFamily="@font/gilroy_bold"
-                android:text="@{data.upload_on != null ? data.upload_on.substring(7,8): data.updated_on.substring(0,1)}"
-                android:textColor="#000"
-                android:textSize="24sp"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="@+id/txtBuy"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/txtBuy" />
-
-
-            <TextView
-                android:id="@+id/txtBuy"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:layout_marginEnd="20dp"
-                android:layout_marginBottom="20dp"
-                android:background="@drawable/background_button_buy"
-                android:drawableStart="@drawable/buy"
-                android:padding="10dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/txt" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </FrameLayout>
 </layout>
