--- a/app/src/main/res/layout/item_manga.xml
+++ b/app/src/main/res/layout/item_manga.xml
@@ -54,27 +54,26 @@
 
             <TextView
                 android:id="@+id/txt"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="5dp"
                 android:fontFamily="@font/gilroy_medium"
-                android:text="chap, price"
+                android:text="@{data.type}"
                 android:textColor="#7C7C7C"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/txtName" />
 
             <TextView
                 android:id="@+id/txtPrice"
-                android:layout_width="wrap_content"
+                android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
+                android:layout_marginEnd="10dp"
                 android:fontFamily="@font/gilroy_bold"
-                android:text="@{data.upload_on != null ? data.upload_on.substring(7,8): data.updated_on.substring(0,1)}"
-                android:textColor="#000"
-                android:textSize="24sp"
-                android:textStyle="bold"
+                android:text="@{data.upload_on != null ? data.upload_on: data.updated_on}"
                 app:layout_constraintBottom_toBottomOf="@+id/txtBuy"
+                app:layout_constraintEnd_toStartOf="@+id/txtBuy"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/txtBuy" />
 
