--- a/app/src/main/res/layout/fragment_genre.xml
+++ b/app/src/main/res/layout/fragment_genre.xml
@@ -24,7 +24,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:fontFamily="@font/gilroy_bold"
-            android:text="Find Genre"
+            android:text="@string/find_genre"
             android:textColor="#000"
             android:textSize="25sp"
             app:layout_constraintEnd_toEndOf="parent"
