--- a/app/src/main/res/layout/fragment_library.xml
+++ b/app/src/main/res/layout/fragment_library.xml
@@ -19,12 +19,11 @@
         android:background="#fff"
         tools:context=".ui.detailgener.DetailGenerFragment">
 
-        <LinearLayout
+        <FrameLayout
             android:id="@+id/linearLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
-            android:orientation="vertical"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -33,21 +32,28 @@
                 android:id="@+id/btnBack"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="start"
+                android:layout_gravity="start|center_vertical"
                 android:layout_marginStart="20dp"
                 android:drawableStart="@drawable/ic_back"
                 android:gravity="start" />
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:fontFamily="@font/gilroy_bold"
+                android:text="@string/library"
+                android:textColor="#000"
+                android:textSize="25sp" />
 
-            <androidx.appcompat.widget.SearchView
-                android:id="@+id/btnSearch"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:background="@drawable/background_btn_search"
-                android:layout_marginHorizontal="20dp"
-                android:layout_marginVertical="10dp"
-                android:gravity="end" />
-        </LinearLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end|center_vertical"
+                android:layout_marginEnd="20dp"
+                android:drawableEnd="@drawable/ic_search" />
+
+        </FrameLayout>
 
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="0dp"
@@ -61,8 +67,35 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+            app:layout_constraintTop_toBottomOf="@+id/tabLayout2" />
 
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tabLayout2"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            app:tabGravity="fill"
+            app:tabMode="fixed"
+            app:tabIndicatorFullWidth="false"
+            android:dataManga="@{viewmodel.data}"
+            android:adapter="@{adapter}"
+            app:tabSelectedTextColor="@color/green_color"
+            app:tabTextAppearance="@style/TextTabLayoutAppearance"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout">
+
+            <com.google.android.material.tabs.TabItem
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Recents" />
+
+            <com.google.android.material.tabs.TabItem
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Favourite" />
+
+        </com.google.android.material.tabs.TabLayout>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
