--- a/app/src/main/res/layout/fragment_library.xml
+++ b/app/src/main/res/layout/fragment_library.xml
@@ -5,12 +5,14 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="viewmodel"
             type="com.baokiin.mangatoon.ui.library.LibraryViewModel" />
+
         <variable
             name="adapter"
-            type="com.baokiin.mangatoon.adapter.ItemMangaAdapter"/>
+            type="com.baokiin.mangatoon.adapter.ItemMangaAdapter" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -19,41 +21,20 @@
         android:background="#fff"
         tools:context=".ui.detailgener.DetailGenerFragment">
 
-        <FrameLayout
-            android:id="@+id/linearLayout"
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/txtTitle"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_marginTop="30dp"
+            android:fontFamily="@font/gilroy_bold"
+            android:text="@string/library"
+            android:textColor="#000"
+            android:textSize="25sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent" />
 
-            <TextView
-                android:id="@+id/btnBack"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="start|center_vertical"
-                android:layout_marginStart="20dp"
-                android:drawableStart="@drawable/ic_back"
-                android:gravity="start" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:fontFamily="@font/gilroy_bold"
-                android:text="@string/library"
-                android:textColor="#000"
-                android:textSize="25sp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end|center_vertical"
-                android:layout_marginEnd="20dp"
-                android:drawableEnd="@drawable/ic_search" />
-
-        </FrameLayout>
 
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="0dp"
@@ -74,26 +55,26 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            app:tabGravity="fill"
-            app:tabMode="fixed"
-            app:tabIndicatorFullWidth="false"
-            android:dataManga="@{viewmodel.data}"
             android:adapter="@{adapter}"
-            app:tabSelectedTextColor="@color/green_color"
-            app:tabTextAppearance="@style/TextTabLayoutAppearance"
+            android:dataManga="@{viewmodel.data}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout">
+            app:layout_constraintTop_toBottomOf="@+id/txtTitle"
+            app:tabGravity="fill"
+            app:tabIndicatorFullWidth="false"
+            app:tabMode="fixed"
+            app:tabSelectedTextColor="@color/green_color"
+            app:tabTextAppearance="@style/TextTabLayoutAppearance">
 
             <com.google.android.material.tabs.TabItem
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Recents" />
+                android:text="@string/recents" />
 
             <com.google.android.material.tabs.TabItem
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Favourite" />
+                android:text="@string/favourite" />
 
         </com.google.android.material.tabs.TabLayout>
 
