--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -1,212 +1,228 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".ui.mine.MineFragment">
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <data>
+
+        <variable
+            name="viewmodel"
+            type="com.baokiin.mangatoon.ui.mine.MineViewModel" />
+    </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/backgroundAccount"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#fff"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        tools:context=".ui.mine.MineFragment">
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/cardView2"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_marginStart="50dp"
-            android:layout_marginTop="50dp"
-            android:layout_marginBottom="30dp"
-            app:cardCornerRadius="40dp"
-            app:cardElevation="0dp"
-            app:layout_constraintBottom_toBottomOf="parent"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/backgroundAccount"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#fff"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
-            <ImageView
-                android:id="@+id/imgavatarFragment"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scaleType="centerCrop" />
-        </androidx.cardview.widget.CardView>
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cardView2"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_marginStart="50dp"
+                android:layout_marginTop="50dp"
+                android:layout_marginBottom="30dp"
+                app:cardCornerRadius="40dp"
+                app:cardElevation="0dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:id="@+id/txtName"
-            android:layout_width="wrap_content"
+                <ImageView
+                    android:image_auth="@{viewmodel.auth.currentUser.photoUrl}"
+                    android:id="@+id/imgavatarFragment"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="centerCrop"
+                    tools:ignore="ContentDescription" />
+            </androidx.cardview.widget.CardView>
+
+            <TextView
+                android:id="@+id/txtName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="30dp"
+                android:drawableEnd="@drawable/ic_edit"
+                android:drawablePadding="10dp"
+                android:fontFamily="@font/gilroy_bold"
+                android:textColor="#000"
+                android:textSize="25sp"
+                android:text="@{viewmodel.auth.currentUser.displayName}"
+                app:layout_constraintBottom_toTopOf="@+id/txtMail"
+                app:layout_constraintStart_toEndOf="@+id/cardView2"
+                app:layout_constraintTop_toTopOf="@+id/cardView2" />
+
+            <TextView
+                android:id="@+id/txtMail"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="28dp"
+                android:textSize="18sp"
+                android:text_auth="@{viewmodel.auth.currentUser}"
+                app:layout_constraintBottom_toBottomOf="@+id/cardView2"
+                app:layout_constraintStart_toEndOf="@+id/cardView2"
+                app:layout_constraintTop_toBottomOf="@+id/txtName" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/constraintLayout"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="30dp"
-            android:drawableEnd="@drawable/ic_edit"
-            android:drawablePadding="10dp"
-            android:fontFamily="@font/gilroy_bold"
-            android:text="Hồ Minh Quốc Bảo"
-            android:textColor="#000"
-            android:textSize="25sp"
-            app:layout_constraintBottom_toTopOf="@+id/txtMail"
-            app:layout_constraintStart_toEndOf="@+id/cardView2"
-            app:layout_constraintTop_toTopOf="@+id/cardView2" />
-
-        <TextView
-            android:id="@+id/txtMail"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="28dp"
-            android:text="Baokiinkk@gmail.com"
-            android:textSize="18sp"
-            app:layout_constraintBottom_toBottomOf="@+id/cardView2"
-            app:layout_constraintStart_toEndOf="@+id/cardView2"
-            app:layout_constraintTop_toBottomOf="@+id/txtName" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraintLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#fff"
-        android:layout_marginTop="5dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/backgroundAccount">
-
-        <TextView
-            android:id="@+id/textView14"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:drawableStart="@drawable/ic_coin"
-            android:drawablePadding="50dp"
-            android:fontFamily="@font/gilroy_bold"
-            android:text="50"
-            android:textColor="@color/green_color"
-            android:textSize="30sp"
-            app:layout_constraintBottom_toBottomOf="@+id/textView15"
+            android:background="#fff"
+            android:layout_marginTop="5dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/backgroundAccount">
 
-        <TextView
-            android:id="@+id/textView15"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="30dp"
-            android:text="Xu"
-            android:textColor="@color/green_color"
-            android:textSize="24sp"
-            app:layout_constraintStart_toEndOf="@+id/textView14"
+            <TextView
+                android:id="@+id/txtCoin"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawableStart="@drawable/ic_coin"
+                android:drawablePadding="50dp"
+                android:fontFamily="@font/gilroy_bold"
+                android:text="@{String.valueOf(viewmodel.coin)}"
+                android:textColor="@color/green_color"
+                android:textSize="30sp"
+                app:layout_constraintBottom_toBottomOf="@+id/textView15"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+
+            <TextView
+                android:id="@+id/textView15"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="30dp"
+                android:text="@string/xu"
+                android:textColor="@color/green_color"
+                android:textSize="24sp"
+                app:layout_constraintStart_toEndOf="@+id/txtCoin"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <Button
+                android:id="@+id/btnNap"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="15dp"
+                android:layout_marginTop="30dp"
+                android:layout_marginEnd="30dp"
+                android:layout_marginBottom="30dp"
+                android:background="@drawable/background_btn_green"
+                android:text="@string/n_p_xu"
+                android:textAllCaps="false"
+                android:textSize="20sp"
+                android:textColor="@color/text_color_white"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toEndOf="@+id/button4"
+                app:layout_constraintTop_toBottomOf="@+id/txtCoin" />
+
+            <Button
+                android:id="@+id/button4"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="30dp"
+                android:layout_marginTop="30dp"
+                android:layout_marginEnd="15dp"
+                android:background="@drawable/background_btn_search"
+                android:text="@string/history"
+                android:textSize="20sp"
+                android:textAllCaps="false"
+                android:textColor="@color/green_color"
+                app:layout_constraintEnd_toStartOf="@+id/btnNap"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/txtCoin" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <include
+            android:visibility="gone"
+            android:id="@+id/layoutMine"
+            layout="@layout/layout_mine"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <Button
-            android:id="@+id/btnNap"
+        <TextView
+            android:id="@+id/textView16"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="15dp"
-            android:layout_marginTop="30dp"
-            android:layout_marginEnd="30dp"
-            android:layout_marginBottom="30dp"
-            android:background="@drawable/background_btn_green"
-            android:text="Nạp xu"
-            android:textAllCaps="false"
+            android:layout_height="50dp"
+            android:layout_marginTop="5dp"
+            android:background="@color/text_color_white"
+            android:gravity="center|start|center_horizontal"
+            android:text="@string/help"
             android:textSize="20sp"
-            android:textColor="@color/text_color_white"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:fontFamily="@font/gilroy_bold"
+            android:drawablePadding="10dp"
+            android:paddingStart="10dp"
+            android:textColor="#000"
+            android:drawableStart="@drawable/ic_help"
+            android:drawableEnd="@drawable/ic_next_black"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/button4"
-            app:layout_constraintTop_toBottomOf="@+id/textView14" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
+            tools:ignore="RtlSymmetry" />
 
-        <Button
-            android:id="@+id/button4"
+        <TextView
+            android:id="@+id/textView17"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="5dp"
+            android:background="@color/text_color_white"
+            android:gravity="center|start|center_horizontal"
+            android:text="@string/about"
+            android:textSize="20sp"
+            android:fontFamily="@font/gilroy_bold"
+            android:drawablePadding="10dp"
+            android:paddingStart="10dp"
+            android:textColor="#000"
+            android:drawableStart="@drawable/ic_about"
+            android:drawableEnd="@drawable/ic_next_black"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView16"
+            tools:ignore="RtlSymmetry" />
+
+        <TextView
+            android:id="@+id/txtDangXuat"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="30dp"
-            android:layout_marginTop="30dp"
-            android:layout_marginEnd="15dp"
+            android:layout_marginEnd="30dp"
+            android:layout_marginBottom="20dp"
             android:background="@drawable/background_btn_search"
-            android:text="History"
-            android:textSize="20sp"
-            android:textAllCaps="false"
-            android:textColor="@color/green_color"
-            app:layout_constraintEnd_toStartOf="@+id/btnNap"
-            app:layout_constraintHorizontal_bias="0.5"
+            android:drawableStart="@drawable/ic_logout"
+            android:fontFamily="@font/gilroy_bold"
+            android:gravity="center"
+            android:paddingStart="20dp"
+            android:text="@string/log_out"
+            android:paddingVertical="10dp"
+            android:textColor="#53B175"
+            android:textSize="25sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView14" />
+            tools:ignore="RtlSymmetry" />
+
+
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <include
-        android:visibility="gone"
-        android:id="@+id/layoutMine"
-        layout="@layout/layout_mine"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/textView16"
-        android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="5dp"
-        android:background="@color/text_color_white"
-        android:gravity="center|start|center_horizontal"
-        android:text="Help"
-        android:textSize="20sp"
-        android:fontFamily="@font/gilroy_bold"
-        android:drawablePadding="10dp"
-        android:paddingStart="10dp"
-        android:textColor="#000"
-        android:drawableStart="@drawable/ic_help"
-        android:drawableEnd="@drawable/ic_next_black"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
-
-    <TextView
-        android:id="@+id/textView17"
-        android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="5dp"
-        android:background="@color/text_color_white"
-        android:gravity="center|start|center_horizontal"
-        android:text="About"
-        android:textSize="20sp"
-        android:fontFamily="@font/gilroy_bold"
-        android:drawablePadding="10dp"
-        android:paddingStart="10dp"
-        android:textColor="#000"
-        android:drawableStart="@drawable/ic_about"
-        android:drawableEnd="@drawable/ic_next_black"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView16" />
-
-    <TextView
-        android:id="@+id/txtDangXuat"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:layout_marginEnd="30dp"
-        android:layout_marginBottom="20dp"
-        android:background="@drawable/background_btn_search"
-        android:drawableStart="@drawable/ic_logout"
-        android:fontFamily="@font/gilroy_bold"
-        android:gravity="center"
-        android:paddingStart="20dp"
-        android:text="Log out"
-        android:paddingVertical="10dp"
-        android:textColor="#53B175"
-        android:textSize="25sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent" />
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
